[package]
name = "ashttp"
version = "0.1.0"
authors = ["Takeru Ohta <phjgt308@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
async-std = "1"
bytecodec = "0.4"
futures = "0.3"  # TODO: Move to dev-dependencies
thiserror = "1"
httpcodec = "0.2"
url = "2"
